update docs and optimize the code
